Some changes on the properties modules
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1546 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/HeaderComponent.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/HeaderComponent.mxml
@@ -32,14 +32,15 @@
 
     <mx:Script>
     	<![CDATA[
-    		import mx.managers.PopUpManager;
             import mx.controls.Alert;
     		import mx.collections.ArrayCollection;
+    		import mx.managers.PopUpManager;
             
             import org.granite.tide.spring.Identity;
             import org.granite.tide.events.TideFaultEvent;
             import org.granite.tide.events.TideResultEvent;
             
+    	    import org.openwms.core.domain.system.usermanagement.SystemUser;
             import org.openwms.web.flex.client.model.ModelLocator;
     		import org.openwms.web.flex.client.event.ApplicationEvent;
             import org.openwms.web.flex.client.util.I18nUtil;
@@ -60,7 +61,7 @@
             public var modelLocator : ModelLocator;
             
             /**
-             * Click on user button.
+             * Click the user button.
              *
              * @param event Unused
              */
@@ -70,7 +71,7 @@
             }
             
             /**
-             * Click on logout button.
+             * Click the logout button.
              *
              * @param event Unused
              */
@@ -80,7 +81,7 @@
     		}
     		
             /**
-             * Click on lock button.
+             * Click the lock button.
              *
              * @param event Unused
              */
@@ -96,7 +97,7 @@
         <mx:Image height="100%" source="@Embed('assets/images/openwms_header.png')" />
         <mx:VBox height="100%" width="100%" horizontalAlign="right" verticalAlign="bottom" verticalGap="0">
             <mx:HBox id="loggedInUserBox" width="100%" horizontalAlign="right">
-                <mx:LinkButton label="{modelLocator.loggedInUser.username}" click="showPrefs();" color="#E9EBEB" />
+                <mx:LinkButton label="{modelLocator.loggedInUser.username}" enabled="{!(modelLocator.loggedInUser is SystemUser)}" click="showPrefs();" color="#E9EBEB" />
                 <mx:Image width="16" source="@Embed('assets/images/icons/user--anonymous.png')"/>
             </mx:HBox>
             <mx:HBox id="lockBox" width="100%" horizontalAlign="right">
