--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/App.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/App.mxml
@@ -30,6 +30,7 @@
         [Name("application")]
         [ManagedEvent(name="APP.MERGE_GRANTS")]
 	    [ManagedEvent(name="APP.READY_TO_UNLOAD")]
+        [ManagedEvent(name="APP.CLEAR_MODEL")]
         [ManagedEvent(name="LOAD_ALL_MODULES")]
         [ManagedEvent(name="UNLOAD_ALL_MODULES")]
         [ManagedEvent(name="I18N_LOAD_ALL")]
